--- a/src/Styles/Components/Search/_search.scss
+++ b/src/Styles/Components/Search/_search.scss
@@ -2,12 +2,18 @@
   @include component-container;
 
   .title {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
   }
 
-  .user-hint {
-    font-weight: $font-weight-bold;
-    text-decoration: none;
+  .search-no-results {
+    .user-hint {
+      font-weight: $font-weight-bold;
+      text-decoration: none;
+    }
+
+    h3 {
+      margin-bottom: 0.5rem;
+    }
   }
 
   section {
@@ -15,7 +21,7 @@
   }
 
   input {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     width: 100%;
     padding: 1rem;
     border: $border;
