fixing button, input and links

--- a/src/Styles/Components/Layout/Header/_header.scss
+++ b/src/Styles/Components/Layout/Header/_header.scss
@@ -10,7 +10,9 @@
   }
 
   .header-link {
-    text-decoration: none;
+    @include dark-mode-inherit {
+      text-decoration: none;
+    }
   }
 
   h1 {
