--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -8,4 +8,7 @@ $breakpoint-xmd: 1000px;
 $breakpoint-md: 767px;
 $breakpoint-sm: 576px;
 
+// No color bco dark-mode setup
 $border: solid 1px;
+
+$transform: scale(1.03);
