--- a/src/Styles/Components/Layout/Navbar/_navbar.scss
+++ b/src/Styles/Components/Layout/Navbar/_navbar.scss
@@ -17,6 +17,21 @@
       justify-content: space-between;
       padding: 1rem;
     }
+
+    .nav-links,
+    .theme-button {
+      @include link;
+      cursor: pointer;
+      font-size: 1rem;
+      letter-spacing: 0.1rem;
+      display: block;
+      padding: 0.5rem 1rem;
+      border: 0;
+
+      &:hover {
+        color: $hover-color;
+      }
+    }
   }
 
   .nav-header {
@@ -57,22 +72,6 @@
         display: flex;
         align-items: center;
       }
-    }
-
-    a,
-    .theme-button {
-      font-size: 1rem;
-      letter-spacing: 0.1rem;
-      display: block;
-      padding: 0.5rem 1rem;
-    }
-
-    a {
-      text-decoration: none;
-    }
-
-    .theme-button {
-      @include borderless-button;
     }
   }
 }
