--- a/src/Styles/Components/Other/_form.scss
+++ b/src/Styles/Components/Other/_form.scss
@@ -10,11 +10,6 @@
   }
 
   button {
-    @include button;
-    display: inline-block;
-    margin-top: 0;
-    width: 100%;
-    padding: 0.25rem 0.75rem;
-    border: $border;
+    @include form-button;
   }
 }
