--- a/src/Styles/_mixins.scss
+++ b/src/Styles/_mixins.scss
@@ -45,48 +45,80 @@
   margin: 1rem 0;
 }
 
-@mixin dark-mode-inherit {
+@mixin inherits-for-darkmode {
   color: inherit;
   background-color: inherit;
   border-color: inherit;
-  @content;
-
-  &:hover {
-    transform: $transform;
-  }
-  // transition: inherit;
 }
 
 // Buttons
-@mixin button {
-  @include dark-mode-inherit;
+@mixin button-template {
+  @include inherits-for-darkmode;
   font-family: inherit;
   cursor: pointer;
   text-transform: capitalize;
+  border: $border;
+
+  &:hover {
+    color: $hover-color;
+  }
 }
 
 @mixin borderless-button {
-  @include button;
+  @include button-template;
   border: none;
   @content;
 
   &:hover {
-    transform: $transform;
+    color: $hover-color;
+  }
+}
+
+@mixin form-button {
+  @include button-template;
+  display: inline-block;
+  margin-top: 0;
+  width: 100%;
+  padding: 0.25rem 0.75rem;
+
+  &:hover {
+    box-shadow: var(--border-shadow);
   }
 }
 
 @mixin large-button {
-  @include button;
+  @include button-template;
   font-size: 1.25rem;
   padding: 1rem;
   border: $border;
   @content;
 
   &:hover {
-    color: var(--bcg);
-    background-color: var(--font-and-border);
-    border-color: var(--bcg);
+    color: $hover-color;
   }
 }
 
-// Add @darkmodeinherit til all input og as.
+// Link
+
+@mixin link {
+  @include inherits-for-darkmode;
+  text-decoration: none;
+  @content;
+
+  &:hover {
+    color: $hover-color;
+  }
+}
+
+// Input
+
+@mixin input-field {
+  @include inherits-for-darkmode;
+  outline: 0;
+  @content;
+
+  &:hover,
+  &:focus {
+    box-shadow: var(--border-shadow);
+  }
+}
