--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -8,7 +8,8 @@ $breakpoint-xmd: 1000px;
 $breakpoint-md: 767px;
 $breakpoint-sm: 576px;
 
-// No color bco dark-mode setup
+$transform: scale(1.05);
+
 $border: solid 1px;
 
-$transform: scale(1.03);
+$hover-color: lightblue;
