refactor mixins, form and input

--- a/src/Styles/Components/Account/_account.scss
+++ b/src/Styles/Components/Account/_account.scss
@@ -2,7 +2,7 @@
   @include component-container;
 
   button {
-    @include large-button;
+    @include button($border, 1rem, 1.25rem);
   }
 
   p {
