--- a/src/Styles/Components/AddEmployees/_add-employees.scss
+++ b/src/Styles/Components/AddEmployees/_add-employees.scss
@@ -24,7 +24,7 @@
     width: 100%;
 
     .remove-btn {
-      @include borderless-button;
+      @include button($noBorder);
     }
 
     td:first-child,
