--- a/src/Styles/Components/Mixins/_button-mixins.scss
+++ b/src/Styles/Components/Mixins/_button-mixins.scss
@@ -1,31 +1,17 @@
-@mixin button-template {
+@mixin button(
+  $borderParam: $border,
+  $paddingParam: 0,
+  $fontSizeParam: inherit
+) {
   @include inherits-for-darkmode;
   font-family: inherit;
   cursor: pointer;
   text-transform: capitalize;
-  border: $border;
+  border: $borderParam;
+  padding: $paddingParam;
+  font-size: $fontSizeParam;
 
   &:hover {
     color: $hover-color;
   }
-}
-
-@mixin borderless-button {
-  @include button-template;
-  border: none;
-}
-
-@mixin form-button {
-  @include button-template;
-  display: inline-block;
-  margin-top: 0;
-  width: 100%;
-  padding: 0.25rem 0.75rem;
-}
-
-@mixin large-button {
-  @include button-template;
-  font-size: 1.25rem;
-  padding: 1rem;
-  border: $border;
 }
