--- a/src/Styles/Components/Other/_input-field.scss
+++ b/src/Styles/Components/Other/_input-field.scss
@@ -1,7 +1,3 @@
 .input-field {
-  @include input-field {
-    width: 100%;
-    border: $border;
-    padding: 0.5rem;
-  }
+  @include input-field($paddingSmallInput);
 }
