--- a/src/Styles/Components/Mixins/_other-mixins.scss
+++ b/src/Styles/Components/Mixins/_other-mixins.scss
@@ -7,17 +7,18 @@
 @mixin link {
   @include inherits-for-darkmode;
   text-decoration: none;
-  @content;
 
   &:hover {
     color: $hover-color;
   }
 }
 
-@mixin input-field {
+@mixin input-field($paddingParam) {
   @include inherits-for-darkmode;
   outline: 0;
-  @content;
+  $border: $border;
+  width: $fullInputWidth;
+  padding: $paddingParam;
 
   &:hover {
     box-shadow: var(--border-shadow);
