--- a/src/Styles/Components/Other/_form.scss
+++ b/src/Styles/Components/Other/_form.scss
@@ -10,6 +10,10 @@
   }
 
   button {
-    @include form-button;
+    @include button;
+    display: inline-block;
+    margin-top: 0;
+    width: 100%;
+    padding: 0.5rem 0.75rem;
   }
 }
