--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,15 +1,37 @@
+//Transitions
 $transition: all 0.2s linear;
+$transform: scale(1.05);
 
+//Font-weight
 $font-weight-light: 300;
 $font-weight-bold: 700;
 
+//Breakpoints
 $breakpoint-lg: 1200px;
 $breakpoint-xmd: 1000px;
 $breakpoint-md: 767px;
 $breakpoint-sm: 576px;
 
-$transform: scale(1.05);
-
-$border: solid 1px;
-
+//Hover
 $hover-color: lightblue;
+
+//Border
+$border: solid 1px;
+$noBorder: none;
+
+//Button Padding
+$noPadding: 0;
+$paddingSmallestButton: 0.5rem;
+$paddingSmallButton: 0.75rem;
+$paddingMediumButton: 1.25;
+$paddingLargeButton: 1.75rem;
+
+//Button Font-size
+$fontSizeSmallButton: 0.75rem;
+$fontSizeMediumButton: 1rem;
+$fontSizeLargeButton: 1.25rem;
+
+//Input-field
+$fullInputWidth: 100%;
+$paddingSmallInput: 0.5rem;
+$paddingBigInput: 1rem;
