--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -23,13 +23,13 @@ $noBorder: none;
 $noPadding: 0;
 $paddingSmallestButton: 0.5rem;
 $paddingSmallButton: 0.75rem;
-$paddingMediumButton: 1.25;
+$paddingMediumButton: 1.25rem;
 $paddingLargeButton: 1.75rem;
 
 //Button Font-size
-$fontSizeSmallButton: 0.75rem;
-$fontSizeMediumButton: 1rem;
-$fontSizeLargeButton: 1.25rem;
+$fontSizeSmall: 0.75rem;
+$fontSizeMedium: 1rem;
+$fontSizeLarge: 1.25rem;
 
 //Input-field
 $fullInputWidth: 100%;
