--- a/src/Styles/Components/Layout/Navbar/_navbar.scss
+++ b/src/Styles/Components/Layout/Navbar/_navbar.scss
@@ -42,7 +42,7 @@
   }
 
   .nav-toggle {
-    @include button($noBorder, $noPadding, $fontSizeSmallButton);
+    @include button($noBorder, $noPadding, $fontSizeSmall);
     font-size: 1.5rem;
 
     @include breakpoint-md-up {
