--- a/src/Styles/Components/Other/_form.scss
+++ b/src/Styles/Components/Other/_form.scss
@@ -9,11 +9,11 @@
     width: 100%;
   }
 
-  button {
+  .submit-button {
     @include button;
     display: inline-block;
     margin-top: 0;
     width: 100%;
-    padding: 0.5rem 0.75rem;
+    padding: 0.25rem 0.75rem;
   }
 }
