refactor css3 variables out

--- a/src/Styles/Components/Layout/DarkmodeWrapper/_darkmode-wrapper.scss
+++ b/src/Styles/Components/Layout/DarkmodeWrapper/_darkmode-wrapper.scss
@@ -9,10 +9,12 @@
   --bcg: #fff;
   --font-and-border: #282c35;
   --border-shadow: 0 0 0.6rem 0 #888888;
+  --hover-color: darkblue;
 }
 
 .dark-theme {
   --bcg: #282c35;
   --font-and-border: #fff;
   --border-shadow: 0 0 0.6rem 0 #dadada;
+  --hover-color: lightblue;
 }
