--- a/src/Styles/Components/Mixins/_layout-mixins.scss
+++ b/src/Styles/Components/Mixins/_layout-mixins.scss
@@ -15,6 +15,6 @@
   align-items: center;
   min-height: 200px;
   padding: 2.5rem;
-  box-shadow: var(--border-shadow);
+  box-shadow: $box-shadow;
   margin: 1rem 0;
 }
