--- a/src/Styles/Components/Layout/Footer/_footer.scss
+++ b/src/Styles/Components/Layout/Footer/_footer.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: var(--border-shadow);
+  box-shadow: $box-shadow;
   margin-top: 3rem;
   padding: 2rem;
 
