--- a/src/Styles/Components/Search/_search.scss
+++ b/src/Styles/Components/Search/_search.scss
@@ -36,7 +36,7 @@
       padding: 1.5rem;
 
       &:hover {
-        box-shadow: var(--border-shadow);
+        box-shadow: $box-shadow;
       }
 
       @include breakpoint-md-up {
@@ -67,7 +67,7 @@
     }
 
     .pagination-numbers {
-      @include button($noBorder, $noPadding, $fontSizeLarge);
+      @include button($noBorder, $noPadding, $fontSizeLargeButton);
       font-weight: $font-weight-bold;
     }
   }
