--- a/src/Styles/Pages/Company/_company.scss
+++ b/src/Styles/Pages/Company/_company.scss
@@ -41,7 +41,7 @@
     }
 
     button {
-      @include button($noBorder, $noPadding, $fontSizeMedium);
+      @include button($noBorder, $noPadding, $fontSizeMediumButton);
       width: 2rem;
       height: 2rem;
       display: flex;
@@ -49,8 +49,8 @@
       justify-content: center;
       border-radius: 50%;
       margin-left: 1rem;
-      color: var(--bcg);
-      background-color: var(--font-and-border);
+      color: $darkModeBackground;
+      background-color: $darkmodeFontAndBorder;
     }
 
     h3,
