--- a/src/Styles/Components/Layout/Navbar/_navbar.scss
+++ b/src/Styles/Components/Layout/Navbar/_navbar.scss
@@ -19,7 +19,7 @@
     }
 
     .nav-links,
-    .theme-button {
+    .theme-btn {
       @include link;
       cursor: pointer;
       font-size: 1rem;
@@ -50,7 +50,7 @@
     }
   }
 
-  h1 {
+  .nav-logo {
     margin-bottom: 0;
   }
 
