--- a/src/Styles/Components/Search/_search.scss
+++ b/src/Styles/Components/Search/_search.scss
@@ -1,7 +1,8 @@
 .search {
   @include component-container;
 
-  .title {
+  .search-title {
+    text-align: center;
     margin-bottom: 1.5rem;
   }
 
@@ -11,13 +12,9 @@
       font-weight: $font-weight-bold;
     }
 
-    h3 {
-      margin-bottom: 0.5rem;
+    .message-title {
+      margin: 0.75rem 0;
     }
-  }
-
-  section {
-    width: 100%;
   }
 
   .search-input {
@@ -31,13 +28,9 @@
       @include flex-col-gap-1rem;
       flex-wrap: wrap;
       justify-content: space-evenly;
-      margin-bottom: 2rem;
+      margin: 2rem 0;
       border: $border;
       padding: 1.5rem;
-
-      &:hover {
-        box-shadow: $box-shadow;
-      }
 
       @include breakpoint-md-up {
         flex-direction: row;
@@ -59,7 +52,7 @@
     display: flex;
     justify-content: center;
 
-    ul {
+    .list-container {
       list-style: none;
       display: flex;
       gap: 1rem;
