--- a/src/Styles/Pages/Virkopedia/_virkopedia.scss
+++ b/src/Styles/Pages/Virkopedia/_virkopedia.scss
@@ -27,13 +27,21 @@
     }
 
     .article-btn {
-      @include button($noBorder, $paddingSmallButton, $fontSizeLargeButton);
+      @include button($noBorder, $paddingSmallButton, $fontSizeMediumButton);
       text-decoration: underline;
+
+      @include breakpoint-md-up {
+        font-size: $fontSizeLargeButton;
+      }
     }
 
     .active-btn {
-      @include button($noBorder, $paddingSmallButton, $fontSizeLargeButton);
+      @include button($noBorder, $paddingSmallButton, $fontSizeMediumButton);
       font-weight: $font-weight-bold;
+
+      @include breakpoint-md-up {
+        font-size: $fontSizeLargeButton;
+      }
     }
   }
 }
