fix af accorditions og search

--- a/src/Styles/Components/Layout/Header/_header.scss
+++ b/src/Styles/Components/Layout/Header/_header.scss
@@ -3,6 +3,10 @@
   margin-top: 2rem;
   padding-left: 0.5rem;
 
+  .header-title {
+    margin-bottom: 0.75rem;
+  }
+
   .header-container {
     display: flex;
     flex-wrap: wrap;
