--- a/src/Styles/Pages/Company/_company.scss
+++ b/src/Styles/Pages/Company/_company.scss
@@ -33,16 +33,31 @@
     padding: 1rem;
     margin-bottom: 1rem;
     border: $border;
-    transition: max-height 1s ease-in-out;
 
-    article {
+    .short-text {
+      @include breakpoint-sm-up {
+        visibility: hidden;
+        display: none;
+      }
+    }
+
+    .long-text {
+      visibility: hidden;
+      display: none;
+
+      @include breakpoint-sm-up {
+        visibility: visible;
+        display: block;
+      }
+    }
+
+    .container {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      transition: max-height 1s ease-in-out;
     }
 
-    button {
+    .show-hide-btn {
       @include button($noBorder, $noPadding, $fontSizeMediumButton);
       width: 2rem;
       height: 2rem;
@@ -53,11 +68,11 @@
       margin-left: 1rem;
       color: $darkModeBackground;
       background-color: $darkmodeFontAndBorder;
-      transition: max-height 1s ease-in-out;
     }
 
-    h3,
-    p {
+    .title,
+    .short-text,
+    .long-text {
       line-height: 1.5rem;
       word-break: break-all;
       margin: 0.5rem;
