refac stateless components + scss cleaning

--- a/src/Styles/Components/Search/_search.scss
+++ b/src/Styles/Components/Search/_search.scss
@@ -26,7 +26,8 @@
   }
 
   .search-company {
-    @include link;
+    @include inherits-for-darkmode;
+    text-decoration: none;
 
     .search-article {
       @include flex-col-gap-1rem;
