--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -4,9 +4,8 @@ $box-shadow: var(--darkmode-border-shadow);
 $darkmodeFontAndBorder: var(--darkmode-font-and-border);
 $darkModeBackground: var(--darkmode-background);
 
-//Transitions
+//Transition
 $transition: all 0.2s linear;
-$transform: scale(1.05);
 
 //Font-weight
 $font-weight-light: 350;
