--- a/src/Styles/Pages/Company/_company.scss
+++ b/src/Styles/Pages/Company/_company.scss
@@ -70,12 +70,15 @@
       background-color: $darkmodeFontAndBorder;
     }
 
-    .title,
     .short-text,
-    .long-text {
+    .long-text,
+    .content {
       line-height: 1.5rem;
       word-break: break-all;
       margin: 0.5rem;
+    }
+
+    .content {
     }
   }
 }
